// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move def snapshots: FU 1`] = `
Object {
  "just": Array [
    Array [
      0,
      -1,
    ],
  ],
}
`;

exports[`move def snapshots: GI 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      1,
    ],
    Array [
      1,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: HI 1`] = `
Object {
  "fly": Array [
    Array [
      0,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: KA 1`] = `
Object {
  "fly": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      1,
    ],
    Array [
      1,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: KE 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -2,
    ],
    Array [
      1,
      -2,
    ],
  ],
}
`;

exports[`move def snapshots: KI 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: KY 1`] = `
Object {
  "fly": Array [
    Array [
      0,
      -1,
    ],
  ],
}
`;

exports[`move def snapshots: NG 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: NK 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: NY 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: OU 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      -1,
      1,
    ],
    Array [
      0,
      1,
    ],
    Array [
      1,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: RY 1`] = `
Object {
  "fly": Array [
    Array [
      0,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      1,
    ],
    Array [
      1,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: TO 1`] = `
Object {
  "just": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      0,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`move def snapshots: UM 1`] = `
Object {
  "fly": Array [
    Array [
      -1,
      -1,
    ],
    Array [
      1,
      -1,
    ],
    Array [
      -1,
      1,
    ],
    Array [
      1,
      1,
    ],
  ],
  "just": Array [
    Array [
      0,
      -1,
    ],
    Array [
      -1,
      0,
    ],
    Array [
      1,
      0,
    ],
    Array [
      0,
      1,
    ],
  ],
}
`;

exports[`preset snapshots: 2 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE-KY",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 3 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 4 1`] = `
Object {
  "board": Array [
    " * -KE-GI-KI-OU-KI-GI-KE * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 5 1`] = `
Object {
  "board": Array [
    " *  * -GI-KI-OU-KI-GI-KE * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 5_L 1`] = `
Object {
  "board": Array [
    " * -KE-GI-KI-OU-KI-GI *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 6 1`] = `
Object {
  "board": Array [
    " *  * -GI-KI-OU-KI-GI *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 8 1`] = `
Object {
  "board": Array [
    " *  *  * -KI-OU-KI *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: 10 1`] = `
Object {
  "board": Array [
    " *  *  *  * -OU *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: HI 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE-KY",
    " *  *  *  *  *  *  * -KA * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: HIKY 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE * ",
    " *  *  *  *  *  *  * -KA * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: HIRATE 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE-KY",
    " * -HI *  *  *  *  * -KA * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 0,
}
`;

exports[`preset snapshots: KA 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE-KY",
    " * -HI *  *  *  *  *  *  * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: KY 1`] = `
Object {
  "board": Array [
    "-KY-KE-GI-KI-OU-KI-GI-KE * ",
    " * -HI *  *  *  *  * -KA * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;

exports[`preset snapshots: KY_R 1`] = `
Object {
  "board": Array [
    " * -KE-GI-KI-OU-KI-GI-KE-KY",
    " * -HI *  *  *  *  * -KA * ",
    "-FU-FU-FU-FU-FU-FU-FU-FU-FU",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    " *  *  *  *  *  *  *  *  * ",
    "+FU+FU+FU+FU+FU+FU+FU+FU+FU",
    " * +KA *  *  *  *  * +HI * ",
    "+KY+KE+GI+KI+OU+KI+GI+KE+KY",
  ],
  "turn": 1,
}
`;
